# telemetry

./: .travis.yml  App.toml.sample  Cargo.toml  LICENSE  README.md  deploy.init.sh  skaffold.yaml
docker/: Dockerfile
src/: main.rs
src/app/: config.rs  messaging_pattern.rs  metrics.rs  mod.rs  stats_route.rs  top_mind_response.rs
