[package]
name = "telemetry"
version = "0.1.4"
authors = ["Andrei Nesterov <ae.nesterov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.6"
config = "0.9"
async-std = { version = "1.6.0", features = ["attributes", "unstable"] }
anyhow = "1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
chrono = "0.4"
isahc = "0.9"
svc-agent = { version = "0.14", features = ["queue-counter"] }
svc-authn = { version = "0.6", features = ["jose"] }
svc-error = { version = "0.1", features = ["svc-agent", "svc-authn", "sentry-extension"] }
woothee = "0.11.0"
tide = "0.13.0"
